--- a/src/components/Forms/styles/styles.css
+++ b/src/components/Forms/styles/styles.css
@@ -27,6 +27,7 @@
 }
 
 .form-input,
+.form-select,
 .form-textarea {
 	padding: 0.95em 3.25em 0.95em 0.75em;
 	width: 100%;
@@ -39,6 +40,25 @@
 	transition: border 0.3s;
 }
 
+.form-select {
+	padding-left: 10px;
+	padding-right: 30px;
+	font-size: 0.9em;
+
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	background-image: url('data:image/svg+xml;charset=US-ASCII,<svg%20xmlns%3D"http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg"%20width%3D"292.4"%20height%3D"292.4"><path%20fill%3D"%23fbfbfb"%20d%3D"M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z"%2F><%2Fsvg>');
+	background-repeat: no-repeat;
+	background-position: right 0.9em top 50%;
+	background-size: 0.65em auto;
+	cursor: pointer;
+}
+
+.form-select option {
+	color: var(--darker-sea-blue-color);
+}
+
 .form-textarea {
 	height: 200px;
 	min-height: 120px;
@@ -47,6 +67,7 @@
 }
 
 .form-input:focus,
+.form-select:focus,
 .form-textarea:focus {
 	border-color: var(--blue-color);
 	outline: var(--blue-color);
@@ -59,6 +80,7 @@
 }
 
 .form-input-error,
+.form-select-error,
 .form-textarea-error,
 .form-recaptcha-error {
 	color: var(--pink-color);
@@ -66,6 +88,7 @@
 }
 
 .form-input-error,
+.form-select-error,
 .form-textarea-error {
 	padding-top: 0.25em;
 	height: 1em;
@@ -90,11 +113,13 @@
 }
 
 form input:invalid[focused='true'] ~ span,
+form select:invalid[focused='true'] ~ span,
 form textarea:invalid[focused='true'] ~ span {
 	visibility: visible;
 }
 
 form input:invalid[focused='true'],
+form select:invalid[focused='true'],
 form textarea:invalid[focused='true'] {
 	border: 1px solid var(--pink-color);
 }
@@ -134,6 +159,7 @@ form textarea:invalid[focused='true'] {
 
 @media screen and (min-width: 400px) {
 	.form-input,
+	.form-select,
 	.form-textarea,
 	.form-label {
 		width: 90%;
@@ -164,7 +190,8 @@ form textarea:invalid[focused='true'] {
 		font-size: 1.1em;
 	}
 
-	.form-input-error {
+	.form-input-error,
+	.form-select-error {
 		font-size: 0.95em;
 	}
 
