Fixed html structure and improved welcome section

--- a/src/sections/Welcome/styles/animations.css
+++ b/src/sections/Welcome/styles/animations.css
@@ -1,3 +1,12 @@
+@keyframes title-slide {
+	0% {
+		transform: translateX(-400%);
+	}
+	100% {
+		transform: translateX(0);
+	}
+}
+
 @keyframes bounce {
 	50% {
 		bottom: 4em;
