Added active to btns and anchors, fixed homepage wrapper

--- a/src/features/home/Contact/components/Forms/styles/styles.css
+++ b/src/features/home/Contact/components/Forms/styles/styles.css
@@ -144,6 +144,10 @@ form textarea:invalid[focused='true'] {
 	z-index: 10;
 }
 
+.form-submit:active {
+	transform: translateY(1px);
+}
+
 .form-submit--is-loading {
 	pointer-events: none;
 }
