--- a/src/app/index.css
+++ b/src/app/index.css
@@ -33,3 +33,10 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+.special-main {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
