--- a/src/features/error-404/styles/styles.css
+++ b/src/features/error-404/styles/styles.css
@@ -46,6 +46,10 @@
 	z-index: 10;
 }
 
+.notfound-btn:active {
+	transform: translateY(1px);
+}
+
 @media screen and (min-width: 500px) {
 	.notfound-btn {
 		padding: 1em 4em;
