--- a/src/features/home/Gallery/styles/styles.css
+++ b/src/features/home/Gallery/styles/styles.css
@@ -61,6 +61,10 @@
 	z-index: 10;
 }
 
+.gallery-btn:active {
+	transform: translateY(1px);
+}
+
 .gallery-special-block {
 	position: absolute;
 	bottom: 0;
