--- a/src/features/home/Welcome/styles/styles.css
+++ b/src/features/home/Welcome/styles/styles.css
@@ -7,8 +7,10 @@
 
 .welcome {
 	position: relative;
-	min-height: 100vh;
+	height: 100vh;
 	width: 100%;
+	max-width: 2720px;
+	max-height: 1820px;
 	background-image: url('../../../../images/welcome-section/hero-bg.jpg');
 	background-size: cover;
 	background-position: center;
