--- a/src/features/privacy/styles/styles.css
+++ b/src/features/privacy/styles/styles.css
@@ -56,8 +56,7 @@
 
 .privacy-policy-box a {
 	color: var(--white-color);
-	font-weight: 500;
-	text-decoration: none;
+	text-underline-offset: 2px;
 	transition: color 0.3s;
 }
 
@@ -79,6 +78,10 @@
 	transition: background-color 0.3s;
 	cursor: pointer;
 	z-index: 10;
+}
+
+.privacy-policy-btn:active {
+	transform: translateY(1px);
 }
 
 @media screen and (min-width: 350px) {
@@ -116,6 +119,10 @@
 
 	.privacy-policy-box a:hover {
 		color: var(--pink-color);
+	}
+
+	.privacy-policy-box a:active {
+		opacity: 0;
 	}
 
 	.privacy-policy-btn {
