--- a/src/shared/components/Navbar/styles/styles.css
+++ b/src/shared/components/Navbar/styles/styles.css
@@ -59,6 +59,10 @@
 	}
 }
 
+.navbar-title-text:active {
+	transform: translateY(1px);
+}
+
 .navbar-desktop {
 	display: none;
 }
@@ -123,6 +127,10 @@
 	padding: 0.5rem;
 	color: var(--white-color);
 	transition: color 0.3s ease-out;
+}
+
+.navbar-special-anchor:active {
+	transform: translateY(1px);
 }
 
 @media screen and (min-width: 500px) {
@@ -190,6 +198,10 @@
 
 	.navbar-title {
 		padding-left: 2rem;
+	}
+
+	.navbar-item-link:active {
+		opacity: 0;
 	}
 
 	.pink-hover:hover {
