Fixed anchors opacity

--- a/src/shared/components/CookieBanner/styles/styles.css
+++ b/src/shared/components/CookieBanner/styles/styles.css
@@ -68,6 +68,10 @@
 		color: var(--darker-yellow-color);
 	}
 
+	.cookie-banner-anchor:active {
+		opacity: 0.55;
+	}
+
 	.cookie-banner-button:hover {
 		background-color: var(--darker-yellow-color);
 	}
