--- a/src/features/home/Gallery/styles/styles.css
+++ b/src/features/home/Gallery/styles/styles.css
@@ -10,7 +10,7 @@
 	padding: 30px 0 40px;
 	width: 100%;
 	background-color: var(--dark-sea-blue-color);
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 .gallery-container,
@@ -67,10 +67,11 @@
 
 .gallery-special-block {
 	position: absolute;
-	bottom: 0;
+	bottom: -1px;
 	width: 40%;
 	height: 40px;
 	background-color: var(--darker-sea-blue-color);
+	z-index: 80;
 }
 
 .gallery-special-block--left {
