--- a/src/shared/components/Navbar/styles/animations.css
+++ b/src/shared/components/Navbar/styles/animations.css
@@ -1,3 +1,21 @@
+@keyframes fade-in {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes fade-out {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
 @keyframes slide-in {
 	0% {
 		-webkit-transform: translateX(120%);
@@ -26,4 +44,12 @@
 
 .animate-slide-out {
 	animation: slide-out 0.5s ease-out;
+}
+
+.animate-fade-in {
+	animation: fade-in 0.3s ease-out forwards;
+}
+
+.animate-fade-out {
+	animation: fade-out 0.3s ease-out forwards;
 }
