--- a/src/features/home/Contact/styles/styles.css
+++ b/src/features/home/Contact/styles/styles.css
@@ -6,7 +6,8 @@
 }
 
 .contact-container,
-.contact-title-box {
+.contact-title-box,
+.contact-form {
 	display: flex;
 	justify-content: center;
 	align-items: center;
