--- a/src/features/home/Contact/components/Forms/styles/styles.css
+++ b/src/features/home/Contact/components/Forms/styles/styles.css
@@ -27,9 +27,13 @@
 }
 
 .form-input,
+.form-textarea {
+	padding: 0.95em 0.75em;
+}
+
+.form-input,
 .form-select,
 .form-textarea {
-	padding: 0.95em 3.25em 0.95em 0.75em;
 	width: 100%;
 	color: var(--white-color);
 	background-color: transparent;
@@ -41,8 +45,7 @@
 }
 
 .form-select {
-	padding-left: 10px;
-	padding-right: 30px;
+	padding: 0.95em 30px 0.95em 10px;
 	font-size: 0.9em;
 
 	-moz-appearance: none;
