Fixed welcome section due to resolution problem and added light pink color

--- a/src/features/PrivacyPolicy/styles/styles.css
+++ b/src/features/PrivacyPolicy/styles/styles.css
@@ -118,7 +118,7 @@
 	}
 
 	.privacy-policy-box a:hover {
-		color: var(--pink-color);
+		color: var(--light-pink-color);
 	}
 
 	.privacy-policy-box a:active {
