--- a/src/shared/styles/globals.css
+++ b/src/shared/styles/globals.css
@@ -2,6 +2,7 @@
 	--white-color: #fbfbfb;
 	--gray-color: #c4c4c4;
 	--pink-color: #c80c59;
+	--light-pink-color: #ff006a;
 	--blue-color: #23a1b4;
 	--sea-blue-color: #0f4353;
 	--dark-sea-blue-color: #0b313e;
